fix: colors do not have a sufficient contrast ratio

--- a/docs/.vuepress/styles/index.css
+++ b/docs/.vuepress/styles/index.css
@@ -768,6 +768,10 @@ html[data-theme='dark'] [vp-content] code {
   color: var(--bootui-green);
 }
 
+[vp-content] div[class*='language-'] .token.number {
+  color: #c9a3c9;
+}
+
 .vp-tabs {
   overflow: hidden;
   border-color: var(--bootui-border);
